- Fixed bug #46381 (wrong $this passed to internal methods causes segfault). 
  (Tony)
- Fixed bug #46082 (stream_set_blocking() can cause a crash in some
  circumstances). (Felipe)
- Fixed bug #46064 (Exception when creating ReflectionProperty object on 
  dynamicly created property). (Felipe)
- Fixed bug #45529 (new DateTimeZone() and date_create()->getTimezone() behave
  different). (Derick)
- Fixed bug #43452 (strings containing a weekday, or a number plus weekday
  behaved incorrect of the current day-of-week was the same as the one in the
  phrase).(Derick)
- Fixed bug #42294 (Unified solution for round() based on C99 round). (Ilia)
- Fixed weekdays adding/subtracting algorithm. (Derick)
- Fixed some ambiguities in the date parser. (Derick)
- Fixed a bug with the YYYY-MM format not resetting the day correctly. (Derick)
- Fixed a bug in the DateTime->modify() methods, it would not use the advanced
  relative time strings. (Derick)

23 Oct 2008, PHP 5.2.7RC2
- Upgraded bundled libzip to 0.9.0. (Pierre)

- Fixed extraction of zip files or directories when the entry name is 
  a relative path. (Pierre)
- Fixed read or write errors for large zip archives. (Pierre)

- Fixed bug #46360 (TCP_NODELAY constant for socket_{get,set}_option). 
  (bugs at trick dot vanstaveren dot us)
- Fixed bug #46343 (IPv6 address filter accepts invalid address). (Ilia)
- Fixed bug #46335 (DOMText::splitText doesn't handle multibyte characters).
  (Rob)
- Fixed bug #46323 (compilation of simplexml for NetWare breaks). 
  (Patch by guenter@php.net)
- Fixed bug #46319 (PHP sets default Content-Type header for HTTP 304
  response code, in cgi sapi). (Ilia)
- Fixed bug #46313 (Magic quotes broke $_FILES). (Arnaud)
- Fixed bug #46308 (Invalid write when changing property from inside getter).
  (Dmitry)
- Fixed bug #46292 (PDO::setFetchMode() shouldn't requires the 2nd arg when 
  using FETCH_CLASSTYPE). (Felipe)
- Fixed bug #46274, #46249 (pdo_pgsql always fill in NULL for empty BLOB and 